p02/$PBS_JOBID.log
p02.cpp: In function ‘int main(int, char**)’:
p02.cpp:46:26: error: expression in new-declarator must have integral or enumeration type
     char *ptr = new char[i]; 
                          ^
